Adjusted for new MaterialEntity properties: namely, Mass and Emission Factor. Created new GET methods, updated the mock objects in the Repository layer of material and product. Additionally, created Validate Self and made it check in the Service when there are errors Lastly, created a suite of preliminary tests for the Material Entity